[package]
name = "pallet-quantum-portal"
version = "1.0.0-dev"
description = "Quantum Portal Offline worker."
authors = ["Ferrum Network"]
homepage = "https://ferrum.network/"
edition = "2021"
license = "Unlicense"
publish = false
repository = "https://github.com/ferrum-x-network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
]
[dependencies]
log = { version = "0.4.14", default-features = false }
parity-scale-codec = { default-features = false, features = ['derive'], version = '2.0.0' }
parking_lot = "0.11"
scale-info = { default-features = false, features = ['derive'], version = '1.0' }
serde = { version = '1.0.130', default-features = false, features = ['derive'] }
serde_json = { version = '1.0.67', default-features = false, features = ['alloc'] }

# Substrate packages

frame-support = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
frame-system = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
sp-arithmetic = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
sp-std = { git = 'https://github.com/paritytech/substrate.git', default-features = false, branch = 'master' }
ethereum = { version = "0.11.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.3.4"
numtoa = { version = "0.2.4", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = ['static-context'] }
rlp = { version = "0.5.1", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["sha3", "keccak"] }

[dependencies.sp-io]
git = 'https://github.com/paritytech/substrate.git'
default-features = false
branch = 'master'

[dependencies.ethabi-nostd]
default-features = false
version = '1.0.0-dev'
path = '../../libraries/ethabi-nostd'

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ["frame-support/try-runtime"]
