[package]
name = "pallet-threshold-validators"
version = "4.0.0-dev"
description = "FRAME pallet template for defining custom runtime logic."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
frame-benchmarking = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0", optional = true }
frame-support = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
frame-system = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
bitcoin={ version = "0.29.1" }
bitcoincore-rpc = "0.18.0"
subxt = { version = "0.32.0" }
subxt-signer = { version = "0.32.0", features = ["subxt"]}
hex = "0.4.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha256 = "1.4.0"
bincode = "1.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
ferrum-primitives = { default-features = false, path = "../../primitives" }
log = { version = "0.4.14", default-features = false }
sp-std = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
electrum-client = "0.12.0"
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk.git', default-features = false, branch = "release-polkadot-v1.1.0" }
secp256k1 = { version = "0.24.0", default-features = false, features = ["bitcoin_hashes"] }
web3 = "0.15"
ethabi-nostd = { path = "../../libraries/ethabi-nostd", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
rlp = { version = "0.5.1", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = ['static-context'] }
numtoa = { version = "0.2.4", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["sha3", "keccak"] }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"ferrum-primitives/std",
	"log/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-io/std",
	"ethabi-nostd/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
