[package]
name = "pallet-transaction-pauser"
version = "1.0.0-dev"
authors = ["Ferrum Network"]
edition = "2021"
homepage = "https://ferrum.network/"
license = "Unlicense"
publish = false
repository = "https://github.com/ferrum-network"
description = "Pallet to pause transactions"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
]
[dependencies]
array-bytes = "4.1"
log = { version = "0.4.14", default-features = false }
parity-scale-codec = { default-features = false, features = ['derive'], version = '3.1.2' }
scale-info = { default-features = false, features = ['derive'], version = '2.1.2' }
# Substrate packages
ferrum-primitives = { default-features = false, path = "../../primitives" }
frame-support = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
frame-system = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
sp-arithmetic = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
sp-core = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
sp-io = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
sp-runtime = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }
sp-std = { git = 'https://github.com/paritytech/polkadot-sdk', default-features = false, branch = "release-polkadot-v1.11.0" }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'parity-scale-codec/std',
	'sp-arithmetic/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
]
try-runtime = ["frame-support/try-runtime"]
