[package]
name = "pallet-transaction-pauser"
version = "1.0.0-dev"
authors = ["Ferrum Network"]
edition = "2021"
homepage = "https://ferrum.network/"
license = "Unlicense"
publish = false
repository = "https://github.com/ferrum-network"
description = "Pallet to pause transactions"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.substrate]
categories = [
	"pallet",
	"offchain worker",
]

[dependencies]
array-bytes = { workspace = true }
log = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
# Substrate packages
ferrum-primitives = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ['std']
std = [
	'frame-support/std',
	'frame-system/std',
	'log/std',
	'codec/std',
	'sp-arithmetic/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'scale-info/std',
	'ferrum-primitives/std',
	'sp-core/std',
]
try-runtime = ["frame-support/try-runtime"]
