[package]
name = "precompile-utils"
authors = ["PureStake"]
description = "Utils to write EVM precompiles."
edition = "2021"
version = "0.1.0"

[dependencies]
affix = "0.1.2"
derive_more = { version = "0.99", optional = true }
hex = { version = "0.4.3", default-features = false }
hex-literal = { version = "0.3.1", optional = true }
impl-trait-for-tuples = "0.2.2"
log = "0.4"
num_enum = { version = "0.5.3", default-features = false }
paste = "1.0.8"
scale-info = { version = "2.0", optional = true, default-features = false, features = ["derive"] }
serde = { version = "1.0.100", optional = true }
sha3 = { version = "0.10", default-features = false }
similar-asserts = { version = "1.1.0", optional = true }

precompile-utils-macro = { path = "macro" }

# Substrate
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
environmental = { version = "1.1.2", default-features = false }

# Frontier
evm = { git = "https://github.com/rust-blockchain/evm", rev = "b7b82c7e1fc57b7449d6dfa6826600de37cc1e65", default-features = false }
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0", default-features = false, features = ["forbid-evm-reentrancy"] }

# Polkadot / XCM
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"sp-core/std",
	"sp-io/std",
	"sp-std/std",
	"sp-runtime/std",
	"environmental/std"
]
testing = ["derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std"]
