[package]
name = "precompile-utils-macro"
authors = ['Ferrum Network <https://github.com/ferrumnet/ferrum-network>']
description = ""
edition = "2021"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
case = "1.0"
num_enum = { version = "0.5.3", default-features = false }
prettyplease = "0.1.18"
proc-macro2 = "1.0"
quote = "1.0"
sha3 = "0.10"
syn = { version = "1.0", features = ["extra-traits", "fold", "full", "visit"] }

[dev-dependencies]
macrotest = "1.0.9"
trybuild = "1.0"

precompile-utils = { path = "../", features = ["testing"] }

fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.1.0" }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.12.0" }
